# webgpu-baseball

./: CMakeLists.txt  README.md  main.cpp
game/: app.cpp  app.h  batted_ball_simulator.cpp  batted_ball_simulator.h  joint.h  pitch_simulator.cpp  pitch_simulator.h
loader/: loader.cpp  loader.h
math/: mat4.cpp  mat4.h  quaternion.cpp  quaternion.h
render/: Vertex.h  camera.cpp  camera.h  render_job.cpp  render_job.h  render_utils.h  renderer.cpp  renderer.h
render-jobs/: atmosphere-graphics.json  bilateral-filter-ambient-occlusion-graphics.json  bilateral-filter-cloud-graphics.json  bilateral-filter-indirect-lighting-graphics.json  bilateral-filter-shadow-graphics.json  bilateral-filter-variance-indirect-diffuse-graphics.json  cloud-graphics.json  composite-graphics.json  copy-render-targets.json  decode-indirect-diffuse-ambient-occlusion-graphics.json  deferred.json  final-composite-graphics.json  light-view-deferred-graphics-0.json  light-view-deferred-graphics-1.json  light-view-deferred-graphics-2.json  light-view-skin-mesh-graphics-0.json  light-view-skin-mesh-graphics-1.json  light-view-skin-mesh-graphics-2.json  lighting-graphics.json  mesh-culling-compute.json  pbr-graphics.json  render-jobs.json  screen-space-visibility-bitmask-ambient-occlusion-graphics-2.json  screen-space-visibility-bitmask-ambient-occlusion-graphics.json  shadow-graphics.json  skin-mesh-compute.json  skin-mesh-from-compute-graphics.json  skin-mesh-graphics.json  sky-convolution-graphics.json  sky-motion-vector-graphics.json  spherical-harmonics-diffuse-graphics.json  ssgi-graphics.json  taa-graphics.json  temporal-accumulation-graphics.json  test-skin-render-jobs.json
shaders/: atmosphere-graphics.shader  bilateral-filter-graphics-2.shader  bilateral-filter-graphics.shader  bilateral-filter-variance-graphics.shader  cloud-graphics.shader  decode-indirect-diffuse-ambient-occlusion-graphics.shader  deferred.shader  final-composite-graphics.shader  light-view-deferred-graphics.shader  light-view-skin-mesh-graphics.shader  lighting-graphics.shader  mesh-culling-compute.shader  screen-space-visiblity-bitmask-ambient-occlusion-graphics.shader  shadow-graphics.shader  skin-mesh-compute.shader  skin-mesh-from-compute-graphics.shader  skin-mesh-graphics.shader  sky-convolution-graphics.shader  sky-motion-vector-graphics.shader  spherical-harmonics-diffuse-graphics.shader  ssgi-graphics.shader  taa-graphics.shader  temporal-accumulation-graphics.shader
tools/gltf_2_binary/: CMakeLists.txt  main.cpp
tools/gltf_2_binary/math/: mat4.cpp  mat4.h  quaternion.cpp  quaternion.h
utils/: LogPrint.h
